--- a/wp-content/themes/me/scss/style.scss
+++ b/wp-content/themes/me/scss/style.scss
@@ -16,6 +16,11 @@ color: $textColor;
 	margin:0px;
 
 header{
+    width: 100%;
+    background: white;
+    transition: all 1s ease;
+    top: 0px;
+    z-index: 99;
 
 	nav{
 
@@ -30,6 +35,7 @@ header{
 		flex-direction: row;
 		 justify-content: center;
 		 align-items: center;
+         margin: 0px;
 
 		li{
 			flex-basis: 20%;
@@ -41,6 +47,8 @@ header{
 				text-transform: uppercase;
 				display: inline-block;
 				font-weight: bold;
+                opacity:0;
+                transition: 1s ease all;
 
 			}
 
@@ -49,6 +57,12 @@ header{
 				display: block;
 				margin: auto;
 			}
+
+            h3{
+                font-size: 50px;
+                margin:5px 0px;
+                transition: 1s ease all;
+            }
 		}
 	}
 
@@ -73,6 +87,63 @@ article{
     border: 30px white solid;
     border-top: none;
     padding: 10vh 0vh;
+
+    .fullH{
+        height: 100vh;
+
+        .project-scroll{
+            transition: 1s ease all;
+            opacity: 0;
+    height: 426px;
+    width: 850px;
+    background-size: contain;
+
+            h1{
+    position: absolute;
+    font-size: 60px;
+    text-transform: uppercase;
+    color: #ec9a00;
+    text-shadow: 1px 1px #ca8300;
+    margin: 0px;
+
+}
+        }
+    }
+
+    #me{
+
+    width: 420px;
+    height: 450px;
+    position:relative;
+
+    h1{
+    position: absolute;
+    right: -600px;
+    left: 339px;
+    font-size: 60px;
+    text-transform: uppercase;
+    color: white;
+    text-shadow: 1px 1px #ca8300;
+    margin:     0px;
+        }
+
+    p{
+position: absolute;
+    right: -600px;
+    top: 180px;
+    left: 339px;
+    font-size: 45px;
+    /* text-transform: uppercase; */
+    color: white;
+    text-shadow: 1px 1px #ca8300;
+    margin:0px;
+    transition: 1s ease all;
+
+    }
+
+
+
+    }
 
     .container{
     	width: 80%;
