--- a/wp-content/themes/me/css/style.css
+++ b/wp-content/themes/me/css/style.css
@@ -62,14 +62,26 @@ body header nav ul li h3 {
   transition: 1s ease all;
 }
 
-body #page-prog {
+body .prog-container {
   position: absolute;
   height: 100%;
   pointer-events: all;
   left: 3.5%;
 }
 
-body #page-prog li {
+body .prog-container .bar.unactive {
+  height: 100%;
+  background: gray;
+  position: fixed;
+  width: 1px;
+}
+
+body .prog-container #page-prog {
+  position: relative;
+  height: 100%;
+}
+
+body .prog-container #page-prog li {
   height: 10%;
 }
 
@@ -242,21 +254,110 @@ section#one #me {
   align-items: center;
 }
 
+.bot-section .social-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.bot-section .social-row i {
+  background-color: #cea965;
+  font-size: 30px;
+  color: white;
+  border-radius: 50%;
+  padding: 35px;
+  margin-right: 15px;
+  transition: 0.5s ease all;
+}
+
+.bot-section .social-row i:hover {
+  background-color: yellow;
+  cursor: pointer;
+}
+
 .bot-section section#about {
-  flex-basis: 50%;
+  align-self: stretch;
+  flex-basis: 40%;
 }
 
 .bot-section section#about h1 {
   font-size: 40px;
   padding-bottom: 5px;
   font-weight: bold;
+  margin: 0px;
 }
 
 .bot-section section#kontakt {
   flex-basis: 50%;
+  align-self: center;
 }
 
 .bot-section section#kontakt input[type="text"] {
   display: block;
   width: 90%;
+  background: none;
+  color: #f5deb3;
+  border: none;
+  border-bottom: 5px solid white;
+  margin: 10px 0px;
+  height: 30px;
+  font-size: 30px;
+  transition: 1s ease all;
+}
+
+.bot-section section#kontakt input[type="text"]:focus {
+  outline: -none;
+  background-color: white;
+}
+
+.bot-section section#kontakt input[placeholder] {
+  color: #ec9a00;
+}
+
+.bot-section section#kontakt textarea {
+  margin-top: 30px;
+  border: none;
+  width: 90%;
+  font-size: 30px;
+  height: 90px;
+}
+
+.bot-section section#kontakt input[type="submit"] {
+  margin-top: 30px;
+  background: rgba(255, 255, 255, 0);
+  color: white;
+  font-size: 20px;
+  padding: 15px 25px;
+  text-shadow: 1.5px 1.5px 6px #bdab8a;
+  border: none;
+  border: 3px solid white;
+  transition: 2s ease all;
+}
+
+.bot-section section#kontakt input[type="submit"]:hover {
+  background-color: yellow;
+  cursor: pointer;
+}
+
+.bot-section section#kontakt ::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: #ec9a00;
+}
+
+.bot-section section#kontakt :-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #ec9a00;
+  opacity: 1;
+}
+
+.bot-section section#kontakt ::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #ec9a00;
+  opacity: 1;
+}
+
+.bot-section section#kontakt :-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #ec9a00;
 }
