--- a/wp-content/themes/me/scss/style.scss
+++ b/wp-content/themes/me/scss/style.scss
@@ -72,16 +72,32 @@ header{
 
 /*PROGRESSION STYLES*/
 
-#page-prog{
+.prog-container{
+
 
         position: absolute;
     height: 100%;
     pointer-events: all;
     left: 3.5%;
 
+    .bar.unactive{
+        height: 100%;
+        background:gray;
+        position:fixed;
+        width: 1px;
+    }
+
+#page-prog{
+
+        position: relative;
+    height: 100%;
+
+
     li{
         height: 10%;
     }
+
+}
 
 }
 
@@ -274,6 +290,8 @@ section#one{
 
 .bot-section{
 
+
+
     height: 100vh;
 
     display: flex;
@@ -282,14 +300,45 @@ section#one{
     justify-content:space-around;
     align-items:center;
 
+    .social-row{
+
+            display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    align-items:center;
+
+
+
+    i{
+        background-color:#cea965;
+        font-size: 30px;
+        color: white;
+        border-radius:50%;
+        padding:35px;
+        margin-right: 15px;
+        transition: 0.5s ease all;
+
+
+        &:hover{
+            background-color:yellow;
+            cursor: pointer;
+        }
+
+    }
+
+        }
+
 section#about {
 
-    flex-basis: 50%;
+     align-self:stretch;
+
+    flex-basis: 40%;
 
     h1{
         font-size: 40px;
         padding-bottom:5px;
         font-weight: bold;
+        margin: 0px
 
     }
 
@@ -298,11 +347,69 @@ section#about {
 section#kontakt{
 
     flex-basis: 50%;
+    align-self:center;
 
     input[type="text"]{
-        display: block;
-        width: 90%;
+    display: block;
+    width: 90%;
+    background: none;
+    color: #f5deb3;
+    border: none;
+    border-bottom: 5px solid white;
+    margin: 10px 0px;
+    height: 30px;
+    font-size: 30px;
+    transition: 1s ease all;
+
+    &:focus{
+        outline: -none;
+        background-color:white;
     }
+    }
+
+    input[placeholder]{
+        color: #ec9a00;
+    }
+
+    textarea{
+        margin-top: 30px;
+        border:none;
+        width: 90%;
+        font-size: 30px;
+        height: 90px;
+    }
+
+    input[type="submit"]{
+    margin-top: 30px;
+    background: rgba(255, 255, 255, 0);
+    color: white;
+    font-size: 20px;
+    padding: 15px 25px;
+    text-shadow: 1.5px 1.5px 6px rgb(189, 171, 138);
+    border: none;
+    border: 3px solid white;
+    transition: 2s ease all;
+
+    &:hover{
+        background-color:yellow;
+        cursor: pointer;
+    }
+    }
+
+    ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #ec9a00;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #ec9a00;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #ec9a00;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #ec9a00;
+}
 
 }
 
