--- a/wp-content/themes/me/css/style.css
+++ b/wp-content/themes/me/css/style.css
@@ -128,12 +128,24 @@ body article {
 }
 
 body article .fullH {
-  height: 100vh;
+  height: 90vh;
+  padding: 10vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  position: relative;
+}
+
+body article .fullH h1 {
+  font-size: 60px;
+  text-transform: uppercase;
+  color: white;
+  text-shadow: 1px 1px #ca8300;
+  margin: 0px;
+  position: absolute;
+  top: 0px;
 }
 
 body article .fullH .project-scroll {
@@ -207,7 +219,7 @@ body article .fullH .project-scroll .text a {
   }
 }
 
-body article .fullH .project-scroll h1 {
+body article .fullH .project-scroll h2 {
   font-size: 45px;
   text-align: center;
   text-transform: uppercase;
@@ -259,11 +271,37 @@ body article .container .referens-item {
   margin: 90px auto;
 }
 
-body article .container .referens-item img {
+body article .container .referens-item .ref-img {
+  float: left;
+  width: 30%;
+}
+
+body article .container .referens-item .ref-img img {
   max-width: 100%;
   height: auto;
   display: block;
   margin: auto;
+}
+
+body article .container .referens-item .ref-text {
+  float: left;
+  width: 55%;
+  margin-left: 10%;
+}
+
+body article .container .referens-item .ref-text a {
+  display: block;
+  border: black solid 1px;
+  color: black;
+  max-width: 90px;
+  text-decoration: none;
+  text-align: center;
+  margin: auto;
+  margin-top: 20px;
+}
+
+body article .container .referens-item .ref-text a:hover {
+  text-decoration: underline;
 }
 
 body article .cont-wrap {
@@ -498,6 +536,41 @@ section#one #me {
   float: left;
   margin: 0px;
   font-size: 15px;
+}
+
+#cat-wrap {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0px 10px;
+}
+
+#cat-wrap li {
+  background-color: white;
+  border-radius: 50%;
+  padding: 20px;
+  background-color: #cea965;
+  color: white;
+  border-radius: 50%;
+  padding: 35px;
+  margin-right: 15px;
+  transition: 0.5s ease all;
+}
+
+#cat-wrap li:hover {
+  cursor: pointer;
+  background-color: yellow;
+}
+
+#cat-wrap li i {
+  display: block;
+  margin: auto;
+  text-align: center;
+  font-size: 18px;
+}
+
+#cat-wrap li span {
+  font-size: 18px;
 }
 
 footer {
