--- a/wp-content/themes/me/scss/style.scss
+++ b/wp-content/themes/me/scss/style.scss
@@ -146,12 +146,25 @@ article{
     padding: 10vh 0vh;
 
     .fullH{
-        height: 100vh;
+        height: 90vh;
+        padding:10vh;
             display: flex;
     flex-direction: row;
     flex-wrap:wrap;
     justify-content:space-around;
     align-items:center;
+    position:relative;
+
+
+    h1 {
+    font-size: 60px;
+    text-transform: uppercase;
+    color: white;
+    text-shadow: 1px 1px #ca8300;
+    margin: 0px;
+    position:absolute;
+    top: 0px;
+}
 
         .project-scroll{
 
@@ -230,7 +243,7 @@ article{
 
     }
 
-            h1{
+            h2{
     font-size: 45px;
     text-align: center;
     text-transform: uppercase;
@@ -293,12 +306,43 @@ position: absolute;
 
     	.referens-item{
     		margin: 90px auto;
+
+            .ref-img{
+
+                    float: left;
+                    width: 30%;
     		img{
     			max-width: 100%;
     			height: auto;
     			display: block;
     			margin: auto;
     		}
+
+                    }
+            .ref-text{
+
+    float: left;
+    width: 55%;
+    margin-left: 10%;
+
+    a{
+    display: block;
+    border: black solid 1px;
+    color: black;
+    max-width: 90px;
+    text-decoration: none;
+    text-align: center;
+    margin: auto;
+    margin-top: 20px;
+
+
+        &:hover{
+            text-decoration: underline;
+        }
+    }
+
+            }
+
     	}
     }
 
@@ -563,6 +607,55 @@ section#kontakt{
 			font-size: 15px;
 		}
 	}
+}
+
+#cat-wrap{
+    display: flex;
+
+    justify-content: space-between;
+
+    list-style: none;
+
+    padding: 0px 10px;
+
+
+    li{
+
+        background-color:white;
+
+        border-radius:50%;
+        padding:20px;
+            background-color: #cea965;
+    color: white;
+    border-radius: 50%;
+    padding: 35px;
+    margin-right: 15px;
+    transition: 0.5s ease all;
+
+    &:hover{
+
+        cursor: pointer;
+        background-color:yellow;
+
+    }
+
+        i{
+            display: block;
+            margin:auto;
+            text-align: center;
+            font-size: 18px;
+
+        }
+
+        span{
+
+            font-size: 18px;
+
+            
+
+        }
+
+    }
 }
 
 
