--- a/wp-content/themes/me/css/style.css
+++ b/wp-content/themes/me/css/style.css
@@ -139,6 +139,12 @@ body article {
   padding: 10vh 0vh;
 }
 
+@media (max-width: 800px) {
+  body article {
+    border: 15px solid white;
+  }
+}
+
 @media (max-width: 700px) {
   body article {
     border: 5px;
@@ -154,6 +160,18 @@ body article .fullH {
   justify-content: space-around;
   align-items: center;
   position: relative;
+}
+
+@media (max-width: 980px) {
+  body article .fullH {
+    padding: 5vh;
+  }
+}
+
+@media (max-width: 780px) {
+  body article .fullH {
+    padding: 2vh;
+  }
 }
 
 body article .fullH h1 {
@@ -256,6 +274,14 @@ body article #me {
   position: relative;
 }
 
+@media (max-width: 980px) {
+  body article #me {
+    width: 300px;
+    height: 300px;
+    background-size: contain;
+  }
+}
+
 body article #me h1 {
   position: absolute;
   right: -600px;
@@ -265,6 +291,24 @@ body article #me h1 {
   color: white;
   text-shadow: 1px 1px #ca8300;
   margin: 0px;
+}
+
+@media (max-width: 980px) {
+  body article #me h1 {
+    font-size: 45px;
+    right: -600px;
+    left: 339px;
+  }
+}
+
+@media (max-width: 780px) {
+  body article #me h1 {
+    font-size: 60px;
+    right: 0px;
+    left: 0px;
+    top: -90px;
+    text-align: center;
+  }
 }
 
 body article #me p {
@@ -278,6 +322,24 @@ body article #me p {
   text-shadow: 1px 1px #ca8300;
   margin: 0px;
   transition: 1s ease all;
+}
+
+@media (max-width: 980px) {
+  body article #me p {
+    font-size: 30px;
+    right: -350px;
+    top: 70px;
+  }
+}
+
+@media (max-width: 780px) {
+  body article #me p {
+    font-size: 40px;
+    right: 0px;
+    left: 0px;
+    top: 350px;
+    text-align: center;
+  }
 }
 
 body article .container {
@@ -379,12 +441,24 @@ section#one {
   justify-content: flex-start;
 }
 
+@media (max-width: 760px) {
+  section#one {
+    justify-content: center;
+  }
+}
+
 section#one #me {
   align-self: baseline;
 }
 
+@media (max-width: 760px) {
+  section#one #me {
+    position: initial;
+  }
+}
+
 .bot-section {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
