--- a/wp-content/themes/me/scss/style.scss
+++ b/wp-content/themes/me/scss/style.scss
@@ -73,6 +73,10 @@ header{
                 margin:5px 0px;
                 transition: 1s ease all;
                 cursor: pointer;
+
+                @media(max-width:400px){
+
+                }
             }
 		}
 	}
@@ -157,6 +161,10 @@ article{
     border-top: none;
     padding: 10vh 0vh;
 
+    @media(max-width:800px){
+        border:15px solid white;
+    }
+
      @media(max-width:700px){
         border:5px;
      }
@@ -170,6 +178,14 @@ article{
     justify-content:space-around;
     align-items:center;
     position:relative;
+
+    @media(max-width:980px){
+        padding:5vh;
+    }
+
+    @media(max-width:780px){
+        padding:2vh;
+    }
 
 
     h1 {
@@ -287,6 +303,16 @@ article{
     height: 450px;
     position:relative;
 
+    @media(max-width:980px){
+        width: 300px;
+        height:300px;
+        background-size:contain;
+
+
+    }
+
+
+
     h1{
     position: absolute;
     right: -600px;
@@ -296,6 +322,22 @@ article{
     color: white;
     text-shadow: 1px 1px #ca8300;
     margin:     0px;
+
+        @media(max-width:980px){
+        font-size: 45px;
+            right: -600px;
+            left: 339px;
+    }
+
+         @media(max-width:780px){
+            font-size: 60px;
+    right: 0px;
+    left: 0px;
+    top: -90px;
+    text-align: center;
+    
+     }
+
         }
 
     p{
@@ -309,6 +351,21 @@ position: absolute;
     text-shadow: 1px 1px #ca8300;
     margin:0px;
     transition: 1s ease all;
+
+    @media(max-width:980px){
+        font-size: 30px;
+            right: -350px;
+    top: 70px;
+    }
+
+             @media(max-width:780px){
+            font-size: 40px;
+    right: 0px;
+    left: 0px;
+    top: 350px;
+    text-align: center;
+    
+     }
 
     }
 
@@ -428,8 +485,21 @@ font-size: 60px;
 section#one{
         justify-content: flex-start;
 
+    @media(max-width:760px){
+        justify-content: center;
+     }
+
         #me{
             align-self:baseline;
+
+                @media(max-width:760px){
+
+                    position:initial;
+                    
+                    
+
+                }  
+
         }
     }
 
@@ -437,7 +507,7 @@ section#one{
 
 
 
-    height: 100vh;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: row;
