--- a/wp-content/themes/me/css/style.css
+++ b/wp-content/themes/me/css/style.css
@@ -204,6 +204,12 @@ body article .fullH .project-scroll {
   cursor: pointer;
 }
 
+@media (max-width: 700px) {
+  body article .fullH .project-scroll {
+    flex-basis: 100%;
+  }
+}
+
 body article .fullH .project-scroll .bak-img {
   background-size: cover;
   background-position: center center;
@@ -262,6 +268,24 @@ body article .fullH .project-scroll h2 {
   color: white;
   text-shadow: 1px 1px #ca8300;
   margin: 0px;
+}
+
+@media (max-width: 700px) {
+  body article .fullH .project-scroll h2 {
+    font-size: 4vw;
+  }
+}
+
+@media (max-width: 700px) {
+  body article .fullH .project-scroll h3 {
+    font-size: 2vw;
+  }
+}
+
+@media (max-width: 700px) {
+  body article .fullH .project-scroll p {
+    font-size: 1vw;
+  }
 }
 
 body article #3 .project-scroll {
@@ -675,6 +699,13 @@ section#one #me {
   float: left;
   margin: 0px;
   font-size: 15px;
+}
+
+@media (max-width: 780px) {
+  #two h1 {
+    position: initial;
+    font-size: 9vw;
+  }
 }
 
 #cat-wrap {
