working on responsive menu for phones

--- a/wp-content/themes/me/css/style.css
+++ b/wp-content/themes/me/css/style.css
@@ -16,6 +16,7 @@ body header {
   transition: all 1s ease;
   top: 0px;
   z-index: 99;
+  position: relative;
 }
 
 body header nav {
@@ -37,6 +38,16 @@ body header nav ul {
 @media (max-width: 400px) {
   body header nav ul {
     flex-wrap: wrap;
+  }
+}
+
+body header nav ul .logo {
+  display: block;
+}
+
+@media (max-width: 400px) {
+  body header nav ul .logo {
+    display: none;
   }
 }
 
@@ -73,6 +84,168 @@ body header nav ul li h3 {
   margin: 5px 0px;
   transition: 1s ease all;
   cursor: pointer;
+}
+
+body header .responsivelogo h3 {
+  font-size: 50px;
+  margin: 5px 0px;
+  transition: 1s ease all;
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 400px) {
+  body header .responsivelogo h3 {
+    display: block;
+    float: left;
+  }
+}
+
+body header .responsivemenu {
+  display: none;
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+body header .responsivemenu .bars {
+  position: relative;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  float: right;
+}
+
+body header .responsivemenu .bars a {
+  position: absolute;
+  width: 24px;
+  height: 3px;
+  border-radius: 1px;
+  background: #ca8300;
+  left: 13px;
+  top: 23px;
+}
+
+body header .responsivemenu .bars a:before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 3px;
+  border-radius: 1px;
+  background: #ca8300;
+  top: -9px;
+}
+
+body header .responsivemenu .bars a:after {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 3px;
+  border-radius: 1px;
+  background: #ca8300;
+  top: 9px;
+}
+
+@media (max-width: 400px) {
+  body header .responsivemenu {
+    display: block;
+  }
+}
+
+body header .responsivemenu .popup {
+  position: absolute;
+  left: 10px;
+  top: 5px;
+  right: 10px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  pointer-events: none;
+  -webkit-perspective: 2000px;
+  perspective: 2000px;
+}
+
+body header .responsivemenu .popup .popcontainer {
+  width: 100%;
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0 50px 100px rgba(50, 50, 93, 0.1), 0 15px 35px rgba(50, 50, 93, 0.15), 0 5px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  overflow: hidden;
+  position: relative;
+  font-size: 17px;
+  line-height: 40px;
+  white-space: nowrap;
+  -webkit-transform: rotate3d(1, 1, 0, -15deg);
+  transform: rotate3d(1, 1, 0, -15deg);
+  -webkit-transform-origin: 100% 0;
+  transform-origin: 100% 0;
+  opacity: 0;
+  will-change: transform,opacity;
+  -webkit-transition-property: opacity,-webkit-transform;
+  transition-property: opacity,-webkit-transform;
+  transition-property: transform,opacity;
+  transition-property: transform,opacity,-webkit-transform;
+  -webkit-transition-duration: .25s;
+  transition-duration: .25s;
+}
+
+body header .responsivemenu .popup .popcontainer .popclose {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 51px;
+  height: 51px;
+  font-size: 0;
+  cursor: pointer;
+  display: block;
+  z-index: 999999;
+}
+
+body header .responsivemenu .popup .popcontainer .popclose:before {
+  content: '';
+  position: absolute;
+  background: #ca8300;
+  border-radius: 1px;
+  left: 14px;
+  right: 14px;
+  top: 24px;
+  height: 3px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transition: background .1s;
+  transition: background .1s;
+}
+
+body header .responsivemenu .popup .popcontainer .popclose:after {
+  content: '';
+  position: absolute;
+  background: #ca8300;
+  border-radius: 1px;
+  left: 14px;
+  right: 14px;
+  top: 24px;
+  height: 3px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transition: background .1s;
+  transition: background .1s;
+}
+
+body header .responsivemenu.popupactive .popup .popcontainer {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: none;
+  transform: none;
 }
 
 body .clearfix {
