--- a/wp-content/themes/me/scss/style.scss
+++ b/wp-content/themes/me/scss/style.scss
@@ -148,6 +148,7 @@ header{
     height: 50px;
     position: relative;
     float: right;
+    z-index: 99;
         a{
             position: absolute;
     width: 24px;
