--- a/wp-content/themes/me/css/style.css
+++ b/wp-content/themes/me/css/style.css
@@ -102,6 +102,14 @@ body header nav ul li h3 {
   cursor: pointer;
 }
 
+body header #canvas {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+
 body header .responsivemenu {
   display: none;
   position: absolute;
@@ -219,6 +227,47 @@ body header .responsivemenu .popup .popcontainer {
   transition-duration: .25s;
 }
 
+body header .responsivemenu .popup .popcontainer .popmenu ul {
+  list-style: none;
+  padding-left: 15px;
+}
+
+body header .responsivemenu .popup .popcontainer .popmenu ul li a {
+  text-decoration: none;
+}
+
+body header .responsivemenu .popup .popcontainer .popmenu ul li a i {
+  transition: 1s ease all;
+  margin: 10px 0px;
+  margin-right: 15px;
+  border-radius: 50%;
+  padding: 10px;
+  border: 1px solid wheat;
+  font-size: 20px;
+  color: white;
+  background: -webkit-linear-gradient(#f5deb3, #ca8300);
+  /* -webkit-background-clip: text; */
+  /* -webkit-text-fill-color: transparent; */
+}
+
+body header .responsivemenu .popup .popcontainer .popmenu ul li a i:hover {
+  color: gray;
+}
+
+body header .responsivemenu .popup .popcontainer .popmenu ul li a span {
+  transition: 1s ease all;
+  color: #ca8300;
+  text-decoration: none;
+}
+
+body header .responsivemenu .popup .popcontainer .popmenu ul li a span:hover {
+  color: gray;
+}
+
+body header .responsivemenu .popup .popcontainer .popmenu ul li a:hover {
+  color: gray;
+}
+
 body header .responsivemenu .popup .popcontainer .popclose {
   position: absolute;
   right: 0;
@@ -324,12 +373,17 @@ body .right-info {
   width: 30%;
 }
 
+body .pixel {
+  position: absolute;
+}
+
 body article {
   min-height: 100vh;
   background-color: #f5deb3;
   border: 30px white solid;
   border-top: none;
   padding: 10vh 0vh;
+  position: relative;
 }
 
 @media (max-width: 800px) {
