--- a/wp-content/themes/me/scss/style.scss
+++ b/wp-content/themes/me/scss/style.scss
@@ -2,6 +2,8 @@ $textColor: black;
 $headerHeight: 90px;
 $defaultFont: 'Roboto', sans-serif;
 $specialFont: 'Oswald', sans-serif;
+$orangeColor: #cb8606;
+$backgroundColor: #f5deb3;
 
 body,html{
 	height:100%;
@@ -111,6 +113,18 @@ header{
 		}
 	}
 
+}
+
+#canvas{
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+
+    .pixel{
+
+    }
 }
 
 
@@ -234,6 +248,58 @@ header{
     transition-property: transform,opacity,-webkit-transform;
     -webkit-transition-duration: .25s;
     transition-duration: .25s;
+
+    .popmenu{
+        ul{
+            list-style: none;
+            padding-left:15px;
+
+            li{
+
+
+
+  a{
+     text-decoration:none;
+                    i{
+                    transition: 1s ease all;
+    margin: 10px 0px;
+    margin-right: 15px;
+    border-radius: 50%;
+    padding: 10px;
+    border: 1px solid wheat;
+    font-size: 20px;
+    color: white;
+    background: -webkit-linear-gradient(#f5deb3, #ca8300);
+    /* -webkit-background-clip: text; */
+    /* -webkit-text-fill-color: transparent; */
+
+
+    &:hover{
+        color: gray;
+    }
+
+
+                }
+                span{
+    transition: 1s ease all;
+    color: #ca8300;
+    text-decoration:none;
+
+
+    &:hover{
+        color: gray;
+    }
+}
+
+    &:hover{
+        color: gray;
+    }
+
+  }
+            }
+
+        }
+    }
 
     .popclose{
     position: absolute;
@@ -371,6 +437,11 @@ header{
 	width:30%;
 }
 
+.pixel{
+    position: absolute;
+    
+}
+
 
 
 article{
@@ -380,6 +451,7 @@ article{
     border: 30px white solid;
     border-top: none;
     padding: 10vh 0vh;
+    position: relative;
 
     @media(max-width:800px){
         border:15px solid white;
