--- a/wp-content/themes/me/scss/style.scss
+++ b/wp-content/themes/me/scss/style.scss
@@ -437,6 +437,10 @@ header{
 	width:30%;
 }
 
+#canvas{
+    z-index: 1;
+}
+
 .pixel{
     position: absolute;
     
@@ -561,6 +565,12 @@ article{
     left: 10px;
     z-index: 99;
 
+    
+    @media(max-width:700px){
+        width: 90%;
+    }
+
+
     a {
     background-color: #ec9a01;
     color: #ffffff;
@@ -584,21 +594,21 @@ article{
     margin: 0px;
 
     @media(max-width:700px){
-        font-size: 4vw;
+        font-size: 25px;
     }
 
 }
 
 h3{
     @media(max-width:700px){
-        font-size: 2vw;
+        font-size: 20px
     }
 }
 
 p{
 
         @media(max-width:700px){
-        font-size: 1vw;
+        font-size: 16px;
     }
 
 }
@@ -654,6 +664,16 @@ p{
     top: -90px;
     text-align: center;
     
+     }
+
+      @media(max-width:680px){
+        top: -65px;
+      }
+          @media(max-width:470px){
+
+            font-size: 12vw;
+            top: -50px;
+
      }
 
      @media(max-width:400px){
@@ -755,6 +775,8 @@ position: absolute;
     .cont-wrap{
     	max-width: 1200px;
     	margin: auto;
+        position:relative;
+        z-index: 99;
         padding: 19px;
 
         @media(max-width:600px){
