--- a/wp-content/themes/me/css/style.css
+++ b/wp-content/themes/me/css/style.css
@@ -247,12 +247,12 @@ body header .responsivemenu .popup .popcontainer .popmenu ul li a i {
   margin-right: 15px;
   border-radius: 50%;
   padding: 10px;
-  border: 1px solid wheat;
+  /* border: 1px solid wheat; */
   font-size: 20px;
-  color: white;
+  color: black;
   background: -webkit-linear-gradient(#f5deb3, #ca8300);
-  /* -webkit-background-clip: text; */
-  /* -webkit-text-fill-color: transparent; */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 body header .responsivemenu .popup .popcontainer .popmenu ul li a i:hover {
